  - Multithreaded - this should improve perceived performance, and you
    can abort lengthy I/O operations
  - Supports pluggable 'virtual filesystems' which can support transparent
    loading and saving of non-local files
  - The 'File', 'Url' and 'Ftp' VFS's are included with the core. More can
    be added as plugins
  - The code is still a bit rough. User input isn't blocked while saving or
    loading, and there is no way to abort a request. Also, the wait cursor
    handling isn't fully sorted out yet. This will be all be fixed in
    future releases.
- Undo queue size can be set
- You can now prompt the user for input in macros; try invoking
  'Macros->Prompt User for Input' while recording

+ Enhancements

- MARK_PREVIOUS rules are now checked for after keywords
- Function calls are highlighted in C-like modes (C, C++, Java, etc)
- Sequences with a trailing 'd', 'f', or 'l' are now highlighted as digits
- Modal dialog boxes are now centered relative to the current view
- Improved backup directory feature (Richard S. Hall)
- If the pre-load checks (if the file is a directory, if the file is readable,
  etc) fail, then jEdit will no longer create an empty buffer
- jEdit now saves it's settings when the global options dialog box is closed,
  instead of waiting until you exit
- The default focus in many dialog boxes should now be set properly
- Improved key binding handling -- the text area no longer needs to have focus
  for keyboard shortcuts to work

+ Bug Fixes

- DirectoryListSet will no longer throw exceptions if no files to search could
  be found
- Multiline tokens would not be highlighted correctly sometimes (since 2.4pre1)
- Several actions didn't check the read only flag of a buffer before making
  changes
- Sometimes when files were opened the text area wouldn't update its internal
  count of visible lines. This caused problems with scrolling

+ API Changes

- BufferUpdate.LOADING removed. Use BufferUpdate.LOADED instead