@@ -7,7 +7,7 @@
 		<PROPERTY NAME="label" VALUE="BeanShell" />
 		<!-- the ; hack is there so that stuff like if(bob) fred();
 		  -- does not indent the next line -->
-		<PROPERTY NAME="indentPrevLine" VALUE="\s*((if|while|for)\s*\(|else|case)[^;]*" />
+		<PROPERTY NAME="indentPrevLine" VALUE="\s*(((if|while)\s*\(|else|case)[^;]*|for\s*\(.*)" />
 		<!-- set this to 'true' if you want to use GNU coding style -->
 		<PROPERTY NAME="doubleBracketIndent" VALUE="false" />
 		<PROPERTY NAME="indentOpenBrackets" VALUE="{" />
