@@ -22,13 +22,14 @@ package org.gjt.sp.jedit.actions;
 import javax.swing.JOptionPane;
 import java.awt.event.ActionEvent;
 import java.util.Enumeration;
+import org.gjt.sp.jedit.io.VFSManager;
 import org.gjt.sp.jedit.*;
 
 public class reload_all extends EditAction
 {
 	public void actionPerformed(ActionEvent evt)
 	{
-		View view = getView(evt);
+		final View view = getView(evt);
 
 		int result = JOptionPane.showConfirmDialog(view,
 			jEdit.getProperty("reload-all.message"),
@@ -38,11 +39,22 @@ public class reload_all extends EditAction
 		if(result != JOptionPane.YES_OPTION)
 			return;
 
+		view.showWaitCursor();
+
 		Buffer[] buffers = jEdit.getBuffers();
 		for(int i = 0; i < buffers.length; i++)
 		{
 			Buffer buffer = buffers[i];
 			buffer.load(view,true);
 		}
+
+		// hide wait cursor after all I/O is complete
+		VFSManager.runInAWTThread(new Runnable()
+		{
+			public void run()
+			{
+				view.hideWaitCursor();
+			}
+		});
 	}
 }
